src/tests/snapshots/nyx__tests__window_opening__check_target_size@fsT-dwP0.25-dhP0.5-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen true\n    default-column-width { proportion 0.25; }\n    default-window-height { proportion 0.5; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 0 × 360, bounds: 1280 × 720, states: [Activated]
